--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "baseUrl": "./",
     "paths:": {
       "@shared/*": ["src/app/shared/*"],
+      "@features/*": ["src/app/features/*"]
     },
     "outDir": "./dist/out-tsc",
     "strict": true,
