06. configure components alias in tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "paths:": {
       "@shared/*": ["src/app/shared/*"],
       "@features/*": ["src/app/features/*"],
-      "@envs/*": ["src/environments/*"]
+      "@envs/*": ["src/environments/*"],
+      "@components/*": ["src/app/components/*"]
     },
     "outDir": "./dist/out-tsc",
     "strict": true,
